--- a/src/app/primer-componente/primer-componente.component.html
+++ b/src/app/primer-componente/primer-componente.component.html
@@ -1,4 +1,4 @@
-<p>primer-componente works!</p>
+<p>primer-componente works! Soy Juan Alberto Raya</p>
 <ul ngbNav #nav="ngbNav" class="nav-tabs">
   <li ngbNavItem>
     <a ngbNavLink>First</a>
@@ -10,3 +10,4 @@
   </li>
 </ul>
 <div [ngbNavOutlet]="nav"></div>
+￼
